tests/transpiler/x/zig/right_join.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/right_join.zig:15:23: error: unable to infer array size
    const customers: [_]Customer = [_]Customer{.{ .id = 1, .name = "Alice" }, .{ .id = 2, .name = "Bob" }, .{ .id = 3, .name = "Charlie" }, .{ .id = 4, .name = "Diana" }};
                      ^
